--- a/evolutionary/config_evol.cfg
+++ b/evolutionary/config_evol.cfg
@@ -1,3 +1,7 @@
 [google_api_key]
 
 directions  = AIzaSyDPIwBmGSv8LYLur-YTGB0KiKQQojUjNsw
+
+[generation]
+
+writing_routes_folder = optimized_routes
