--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Temporary Items
 .idea/inspectionProfiles/Project_Default.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/.name
+optimized_routes
