--- a/evolutionary/config_evol.cfg
+++ b/evolutionary/config_evol.cfg
@@ -6,3 +6,5 @@ directions  = AIzaSyDPIwBmGSv8LYLur-YTGB0KiKQQojUjNsw
 
 writing_routes_folder = optimized_routes
 minutes_range = 30
+population_amount = 5
+generations_amount = 8
