--- a/database/config_db.cfg
+++ b/database/config_db.cfg
@@ -4,7 +4,7 @@
 host 	= localhost
 port    = 5432
 user 	= postgres
-password    = michaelcic
+password    = password
 database    = uts
 
 [google_api_key]
