Updated mutation function
Mutation accours with the exchange of a certain number of request
between two random columns

--- a/evolutionary/config_evol.cfg
+++ b/evolutionary/config_evol.cfg
@@ -1,10 +1,11 @@
 [google_api_key]
 
-directions  = AIzaSyDPIwBmGSv8LYLur-YTGB0KiKQQojUjNsw
+directions = AIzaSyCZZ3A4_O_rW74sDA_3YqMg0j7SqwQY2aI
 
 [generation]
 
 writing_routes_folder = optimized_routes
 minutes_range = 30
-population_amount = 15
-generations_amount = 8
+mutation_amount = 15
+population_amount = 10
+generations_amount = 10
